Fixes scroll Fixes navbar overflow

--- a/src/app/styles/modules/_home.scss
+++ b/src/app/styles/modules/_home.scss
@@ -1,3 +1,3 @@
 .HomeContainer {
-  width: 100vw;
+  @extend .custom-scroll;
 }
