--- a/src/app/styles/modules/_navbar.scss
+++ b/src/app/styles/modules/_navbar.scss
@@ -1,21 +1,16 @@
 .main-navbar-container {
   position: fixed;
   top: 0;
-  left: 0;
-  right: 0;
   z-index: 100;
   padding: 0;
   width: 100%;
-  padding: 0 ($gutterWidth * 0.8);
 
-  .NavBarContainer {
+  .navbar-conatiner {
     @include display-row;
 
     list-style: none;
     align-items: center;
-
-    // width: 100%;
-    padding: 0;
+    padding: 0 1.5rem 0 1rem;
     justify-content: space-between;
     align-items: center;
     background-color: rgba(0, 0, 0, 0);
