--- a/src/app/styles/modules/_reboot.scss
+++ b/src/app/styles/modules/_reboot.scss
@@ -1,8 +1,8 @@
 .App {
+  @extend .custom-scroll;
+
   padding: 0;
   margin: 0;
-  width: 100%;
-  height: 100%;
 }
 
 a {
