--- a/src/app/styles/partials/_theme.scss
+++ b/src/app/styles/partials/_theme.scss
@@ -7,10 +7,22 @@
 @include font-YesevaOne('YesevaOne', 'YesevaOne-Regular');
 
 html,
-div {
+body,
+#root {
   font-family: $generalFontFamily;
-  overflow-x: hidden;
+  height: 100%;
+  box-sizing: border-box;
+}
 
+body {
+  @extend .custom-scroll;
+
+  overflow-y: auto;
+  overflow-x: hidden;
+  margin: 0;
+}
+
+.custom-scroll {
   &::-webkit-scrollbar-track {
     background-color: $grey-200;
   }
@@ -23,29 +35,4 @@ div {
   &::-webkit-scrollbar-thumb {
     background-color: $orange-500;
   }
-}
-
-body {
-  overflow-y: auto;
-  overflow-x: hidden;
-  margin: 0;
-  -webkit-touch-callout: none;
-
-  /* iOS Safari */
-  -webkit-user-select: none;
-
-  /* Safari */
-  -khtml-user-select: none;
-
-  /* Konqueror HTML */
-  -moz-user-select: none;
-
-  /* Firefox */
-  -ms-user-select: none;
-
-  /* Internet Explorer/Edge */
-  user-select: none;
-
-  /* Non-prefixed version, currently
-                                  supported by Chrome and Opera */
 }
