--- a/src/app/styles/partials/_utils.scss
+++ b/src/app/styles/partials/_utils.scss
@@ -1,53 +1,62 @@
 p {
-	@include desktop-320-767() {
-		font-size: $mobileNormalFontSize;
-		line-height: $mobileNormaLineHeight;
-		padding: 0.8*$gutterWidth 1.6*$gutterWidth;
-		margin: 0;
-	}
-	margin: 0;
-	font-size: $normalFontSize;
-	line-height: $normaLineHeight;
-	letter-spacing: $letterSpacing;
-	font-weight: $text;
-	padding: $gutterWidth 2*$gutterWidth;
-	font-family: $generalFontFamilyLight;
+  @include desktop-320-767 {
+    font-size: $mobileNormalFontSize;
+    line-height: $mobileNormaLineHeight;
+    margin: 0;
+  }
+
+
+  margin: 0;
+  font-size: $normalFontSize;
+  line-height: $normaLineHeight;
+  letter-spacing: $letterSpacing;
+  font-weight: $text;
+  font-family: $generalFontFamilyLight;
 }
+
 h1 {
-	@include desktop-320-767() {
-		font-size: $mobileHeaderFontSize;
-		line-height: $mobileHeaderLineHeight;
-		padding: 1.6*$gutterWidth;
-	}
-	padding: $gutterWidth 2*$gutterWidth;
-	margin: 0;
-	font-family: $headerFontFamily;
-	font-weight: $heading;
-	font-size: $headerFontSize;
-	line-height: $headerLineHeight;
-	letter-spacing: $letterSpacing;
+  @include desktop-320-767 {
+    font-size: $mobileHeaderFontSize;
+    line-height: $mobileHeaderLineHeight;
+  }
+
+
+  margin: 0;
+  font-family: $headerFontFamily;
+  font-weight: $heading;
+  font-size: $headerFontSize;
+  line-height: $headerLineHeight;
+  letter-spacing: $letterSpacing;
 }
+
 b {
-	@include desktop-320-767() {
-		font-size: $mobileNormalFontSize;
-		line-height: $mobileNormaLineHeight;
-	}
-	font-size: $normalFontSize;
-	font-weight: $heading;
-	letter-spacing: $letterSpacing;
+  @include desktop-320-767 {
+    font-size: $mobileNormalFontSize;
+    line-height: $mobileNormaLineHeight;
+  }
+
+
+  font-size: $normalFontSize;
+  font-weight: $heading;
+  letter-spacing: $letterSpacing;
 }
+
 .verticalLine {
-	@include divider();
+  @include divider;
 }
+
 hr {
-	@include divider();
+  @include divider;
 }
+
 p {
-	> .orange-text {
-		color: $orange-500;
-		font-family: $generalFontFamilyMedium;
-	}
+  > .orange-text {
+    color: $orange-500;
+    font-family: $generalFontFamilyMedium;
+  }
 }
+
 .orange-text {
-	color: $orange-500;
+  color: $orange-500;
 }
+
